--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Portfolio website</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -36,7 +36,7 @@
 	<!----About section start---->
 	<section class="about">
 		<div class="main">
-			<img src="img/IMG_3295.jpg">
+			<img src="IMG_3295.jpg">
 			<div class="about-text">
 				<h2>About Me</h2>
 				<h5>Developer <span>& Designer</span></h5>
