--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="error.html">About</a></li>
+				<li><a href="JYOTIRADITYA_PANDA_RESUME">About</a></li>
 				<li><a href="error.html">Skills</a></li>
 				
 			</ul>
